# spreadsheetbot-lib

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
src/spreadsheetbot/: __init__.py  spreadsheetbot.py
src/spreadsheetbot/basic/: __init__.py  drive.py  errors.py  handlers.py  log.py  scheldue.py
src/spreadsheetbot/sheets/: __init__.py  abstract.py  groups.py  i18n.py  keyboard.py  log.py  notifications.py  registration.py  replysheet.py  report.py  settings.py  switch.py  users.py
